--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,6 @@
 @import url('http://fonts.googleapis.com/css?family=Roboto+Slab|Merriweather|Josefin+Slab|Oswald|Bree+Serif');
 
-// @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600&family=Kiwi+Maru&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600&family=Kiwi+Maru&display=swap');
 
 $originalFont:Georgia, serif;
 $originalGreen:#538b5a;
@@ -11,7 +11,7 @@ $originalPurple:#6D73C2;
 $originalDarkBlue:#0076A3;
 $originalNavyBlue:rgb(50,50,70);
 $originalNavy:#2e5d70;
-$originalYellow:#FFBA00;
+$originalYellow: rgb(210, 182, 143);
 $originalDarkGray:#515155;
 $originalGray:#95969c;
 $originalLightGray:#f1eee6;
