--- a/scss/devices/_desktop.scss
+++ b/scss/devices/_desktop.scss
@@ -1,6 +1,5 @@
 @media (min-width: $media-widthDes) {
   body {
-    // position: absolute;
     background-color: rgb(255, 255, 255);
   }
 
@@ -13,7 +12,7 @@
     width: 100px;
     height: 100vh;
     background-color: rgb(255, 255, 255);
-    border-right: 1px black solid;
+    border-right: 1px solid $originalYellow;
     position: fixed;
     top: 0;
     left: 0px; /* 最初は画面外に配置 */
@@ -31,39 +30,39 @@
 
   .bar-top {
     width: 30px;
-    height: 1px;
+    height: 2px;
     display: block;
-    background-color: black;
+    background-color: $originalYellow;
   }
   .bar-middle {
     width: 20px;
-    height: 1px;
+    height: 2px;
     display: block;
-    background-color: black;
+    background-color: $originalYellow;
   }
   .bar-bottom {
     width: 10px;
-    height: 1px;
+    height: 2px;
     display: block;
-    background-color: black;
+    background-color: $originalYellow;
   }
 
   .nav--list__wrapper {
     display: none;
   }
-}
+
 
 .contents--wrapper {
+  overflow: hidden;
   position: absolute;
   left: 230px;
   width: 75%;
-  padding-top: 8vh;
+  padding: 8vh 0vh 2vh 0vh;
   h3 {
     color: $originalBrown;
     font-family: Snell Roundhand, cursive;
     text-decoration: underline 9px rgb(241, 235, 225);
-    // text-underline-offset: -5vh;
-    // position: relative;
+    font-size: 35px;
   }
   .header--wrapper {
     // border: solid 1px red;
@@ -102,7 +101,7 @@
           height: 8vh;
           background-color: white;
           color: $originalLightBrown;
-          border: rgb(210, 182, 143) 1px solid;
+          border: $originalYellow 1px solid;
           cursor: pointer;
           text-transform: uppercase;
           text-decoration: none;
@@ -111,11 +110,12 @@
         }
       }
     }
-    .header--wrapper__rightImg img {
-      height: 100vh;
-      width: 80vh;
-      object-fit: cover;
-      // border: solid 1px red;
+    .header--wrapper__rightImg img{
+          height: 100vh;
+          width: 80vh;
+          object-fit: cover;
+      }
+      
     }
   }
 
@@ -128,54 +128,25 @@
 
     .products--wrapper__img {
       width: 100%;
+      figure{
 
-      figure {
-        // display: grid;
-        // grid-template-columns: repeat(3, 1fr);
-        // grid-template-rows: repeat(2,1fr);
-        gap: 20px;
-        // grid-auto-rows: 20vw;
-        :nth-child(1) {
-          width: 50vh;
-          height: 60vh;
-          object-fit: cover;
-          grid-column: 1 / 2;
-          grid-row: 1 / 2;
-        }
-        :nth-child(2) {
-          width: 45vh;
-          height: 45vh;
-          object-fit: cover;
-          grid-column: 2 / 3;
-          grid-row: 1/ 2;
-        }
-        :nth-child(3) {
-          width: 45vh;
-          height: 45vh;
-          object-fit: cover;
-          grid-column: 3 / 4;
-          grid-row: 1 / 2;
-        }
-        :nth-child(4) {
-          width: 50vh;
-          height: 50vh;
-          object-fit: cover;
-          grid-column: 1 / 2;
-          grid-row: 2 / 3;
-        }
-        :nth-child(5) {
-          width: 90vh;
-          height: 70vh;
-          object-fit: cover;
-          grid-column: 2 / 4;
-          grid-row: 2 / 3;
-        }
+        display: flex;
+        flex-wrap: wrap;
+        row-gap: 3vh;
+        column-gap: 3vh;
+      }
+      img{
+        width: 45vh;
+        height: 45vh;
+        object-fit: cover
+      }
       }
     }
-  }
+  
 
   .aboutUs--wrapper{
     @include disFlexC(column, 5vh, 0vh);
+    padding-top: 10vh;
     .aboutUs--contents__wrapper{
       display: flex;
       .aboutUs--text{
@@ -187,6 +158,8 @@
         p{
           color: $originalGray;
           letter-spacing: 2px;
+          font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+          line-height: 2;
         }
       }
     }
@@ -197,10 +170,18 @@
   }
 
   .bestSeller--wrapper{
-    @include disFlexC(column, 5vh, 0vh);
+    @include disFlexC(column, 8vh, 0vh);
+    padding-top: 10vh;
     .bestSeller--text{
       display: flex;
-      justify-content: space-around;
+      justify-content: space-between;
+      :nth-child(2){
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-weight: 300;
+        font-size: 20px;
+        text-decoration: none;
+        border-bottom: 1px solid $originalGray;
+      }
     }
     .bestSeller--img{
       display: flex;
@@ -208,6 +189,7 @@
       justify-content: space-between;
       figure{
         @include disFlexC(column, 3vh,0vh);
+        text-align: center;
         img{
           width: 40vh;
           height: 50vh;
@@ -215,6 +197,8 @@
         }
         figcaption{
           color: $originalBrown;
+          font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+          line-height: 2
         }
       }
     }
@@ -227,7 +211,7 @@
     .feature--wrapper__left{
       img{
         width: 50vh;
-        height: 70vh;
+        height: 85vh;
         object-fit: cover;
       }
     }
@@ -239,6 +223,8 @@
         p{
           color: $originalGray;
           letter-spacing: 2px;
+          font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+          line-height: 2;
         }
         figure {
           display: flex;
@@ -255,7 +241,7 @@
   }
 
   .sns--wrapper{
-    padding-top: 8vh;
+    padding-top: 15vh;
     @include disFlexC(column, 5vh,0vh);
     .sns--img{
       @include disFlexC(column, 5vh, 0vh);
@@ -305,9 +291,40 @@
     }
   }
 
+  .contact--wrapper{
+    @include disFlexC(column, 5vh, 5vh);
+    padding-top: 15vh;
+    .contact--contents__wrapper{
+      @include flexV(row, 0vh, 0vh, space-between,0vh);
+      .contact--phone__wrapper,
+      .contact--email__wrapper,
+      .contact--address__wrapper,
+      .contact--working__wrapper{
+        @include disFlexC(column, 2vh, 0vh);
+        h5{
+          color: $originalDarkGray;
+        }
+        p{
+          color: $originalLightBrown;
+        }
+      }
+    }
+  }
+
+  .googlemap-wrapper iframe {
+    -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    filter: grayscale(100%);
+  }
 
 
-footer {
-  border: 1px solid black;
+
+  footer {
+    padding-top: 8vh;
+    display: flex;
+    justify-content: flex-end;
+  }
 }
-}
+  
