mobile version is done

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,6 @@
-@import url('http://fonts.googleapis.com/css?family=Roboto+Slab|Merriweather|Josefin+Slab|Oswald|Bree+Serif');
+// @import url('http://fonts.googleapis.com/css?family=Roboto+Slab|Merriweather|Josefin+Slab|Oswald|Bree+Serif');
 
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600&family=Kiwi+Maru&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600&family=Kiwi+Maru&display=swap');
 
 $originalFont:Georgia, serif;
 $originalGreen:#538b5a;
@@ -20,3 +20,4 @@ $originalBlack:#333333;
 $media-widthMob:300px;
 $media-widthTab:700px;
 $media-widthDes:1000px;
+$originalBeige:#F1EBE1;
