--- a/scss/devices/_desktop.scss
+++ b/scss/devices/_desktop.scss
@@ -1,330 +1,210 @@
 @media (min-width: $media-widthDes) {
   body {
-    background-color: rgb(255, 255, 255);
-  }
+    
+    nav {
+      padding: 2%;
+    }
+    header {
+      column-gap: 5vh;
+      .header--wrapper__left {
+      width: 50%;
 
-  // .header {
-  //   border: 1px solid red;
+        @include flexV(column, 10vh, 0vh, center, 0);
+        .header--wrapper__leftContents {
+          width: 70%;
+          @include flexV(column, 5vh, 0vh, center, center);
 
-  // }
-
-  .nav {
-    width: 100px;
-    height: 100vh;
-    background-color: rgb(255, 255, 255);
-    border-right: 1px solid $originalYellow;
-    position: fixed;
-    top: 0;
-    left: 0px; /* 最初は画面外に配置 */
-    transition: left 0.3s; /* 左の位置を変化させるアニメーション */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 20px;
-    justify-content: center;
-  }
-
-  .nav--menu__btn {
-    @include disFlexC(column, 1.5vh, 0vh);
-  }
-
-  .bar-top {
-    width: 30px;
-    height: 2px;
-    display: block;
-    background-color: $originalYellow;
-  }
-  .bar-middle {
-    width: 20px;
-    height: 2px;
-    display: block;
-    background-color: $originalYellow;
-  }
-  .bar-bottom {
-    width: 10px;
-    height: 2px;
-    display: block;
-    background-color: $originalYellow;
-  }
-
-  .nav--list__wrapper {
-    display: none;
-  }
-
-
-.contents--wrapper {
-  overflow: hidden;
-  position: absolute;
-  left: 230px;
-  width: 75%;
-  padding: 8vh 0vh 2vh 0vh;
-  h3 {
-    color: $originalBrown;
-    font-family: Snell Roundhand, cursive;
-    text-decoration: underline 9px rgb(241, 235, 225);
-    font-size: 35px;
-  }
-  .header--wrapper {
-    // border: solid 1px red;
-    display: flex;
-    column-gap: 10vh;
-    .header--wrapper__left {
-      // border: solid 1px red;
-      @include flexV(column, 13vh, 0vh, center, center);
-      .header--wrapper__leftImg figure {
-        display: flex;
-        column-gap: 5vh;
-      }
-      .header--wrapper__leftImg img {
-        width: 18vh;
-        height: 22vh;
-        object-fit: cover;
-        border-top-right-radius: 30%;
-        border-bottom-left-radius: 30%;
-      }
-      .header--wrapper__leftContents {
-        @include flexV(column, 5vh, 0vh, 0, end);
-        h1,
-        h4 {
-          text-align: right;
-          color: $originalLightBrown;
+          align-items: flex-end;
+          h1 {
+            text-align: right;
+            font-size: 45px;
+          }
+          button {
+            width: 30vh;
+            height: 8vh;
+            font-size: 15px;
+          }
         }
-        h1 {
-          font-size: 6vh;
-          letter-spacing: 3px;
-        }
-        h4 {
-          font-family: Snell Roundhand, cursive;
-        }
-        button {
-          width: 30vh;
-          height: 8vh;
-          background-color: white;
-          color: $originalLightBrown;
-          border: $originalYellow 1px solid;
-          cursor: pointer;
-          text-transform: uppercase;
-          text-decoration: none;
-          letter-spacing: 2px;
-          font-size: 15px;
+        .header--wrapper__leftImg figure{
+          column-gap: 6vh;
+          
+          img {
+            width: 18vh;
+            height: 22vh;
+            object-fit: cover;
+
+          }
         }
       }
-    }
-    .header--wrapper__rightImg img{
-          height: 100vh;
-          width: 80vh;
-          object-fit: cover;
-      }
-      
-    }
-  }
-
-  .products--wrapper {
-    @include disFlexC(column, 10vh, 0vh);
-    h3 {
-      color: rgb(93, 41, 11);
-      font-family: Snell Roundhand, cursive;
-    }
-
-    .products--wrapper__img {
-      width: 100%;
-      figure{
-
-        display: flex;
-        flex-wrap: wrap;
-        row-gap: 3vh;
-        column-gap: 3vh;
-      }
-      img{
-        width: 45vh;
-        height: 45vh;
-        object-fit: cover
-      }
-      }
-    }
-  
-
-  .aboutUs--wrapper{
-    @include disFlexC(column, 5vh, 0vh);
-    padding-top: 10vh;
-    .aboutUs--contents__wrapper{
-      display: flex;
-      .aboutUs--text{
-        @include disFlexC(column, 5vh, 0vh);
-        justify-content: center;
-        h3 {
-          padding-left: 20vh;
-        }
-        p{
-          color: $originalGray;
-          letter-spacing: 2px;
-          font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-          line-height: 2;
-        }
-      }
-    }
-    img {
-      width: 80vh;
-      height: 80vh;
-    }
-  }
-
-  .bestSeller--wrapper{
-    @include disFlexC(column, 8vh, 0vh);
-    padding-top: 10vh;
-    .bestSeller--text{
-      display: flex;
-      justify-content: space-between;
-      :nth-child(2){
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        font-weight: 300;
-        font-size: 20px;
-        text-decoration: none;
-        border-bottom: 1px solid $originalGray;
-      }
-    }
-    .bestSeller--img{
-      display: flex;
-      column-gap: 8vh;
-      justify-content: space-between;
-      figure{
-        @include disFlexC(column, 3vh,0vh);
-        text-align: center;
-        img{
-          width: 40vh;
-          height: 50vh;
-          object-fit: cover;
-        }
-        figcaption{
-          color: $originalBrown;
-          font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-          line-height: 2
-        }
-      }
-    }
-  }
-
-  .feature--wrapper{
-    @include disFlexC(column, 8vh, 0vh);
-    padding-top: 15vh;
-    height: 100%;
-    .feature--wrapper__left{
-      img{
-        width: 50vh;
-        height: 85vh;
-        object-fit: cover;
-      }
-    }
-    .feature--contents__wrapper{
-      display: flex;
-      column-gap: 8vh;
-      .feature--wrapper__right{
-        @include disFlexC(column, 5vh,0vh);
-        p{
-          color: $originalGray;
-          letter-spacing: 2px;
-          font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-          line-height: 2;
-        }
+      .header--wrapper__rightImg {
         figure {
+          img {
+            display: flex !important;
+            height: 100vh;
+            width: 80vh;
+            object-fit: cover;
+            // border: 1px solid red;
+          }
+        }
+      }
+    }
+    main{
+      .products--wrapper {
+        width: 70%;
+        padding-top: 5vh;
+        @include disFlexC(column, 5vh, 0vh);
+        .products--wrapper__img {
+          figure {
+            img {
+              width: 40vh;
+              height: 40vh;
+            }
+          }
+        }
+      }
+      .aboutUs--wrapper {
+        width: 70%;
+        padding-top: 10vh;
+        .aboutUs--contents__wrapper {
           display: flex;
-          justify-content: space-between;
-          // column-gap: 5vh;
+          justify-content: center;
+          .aboutUs--text {
+            width: 40%;
+            @include flexV(column, 5vh, 0vh,center,center);
+
+            p {
+              line-height: 2;
+            }
+          }
         }
         img {
-          width: 35vh;
-          height: 45vh;
+          display: flex;
+          width: 80vh;
+          height: 80vh;
         }
       }
-      
-    }
-  }
+      .bestSeller--wrapper {
+        width: 70%;
+        @include disFlexC(column, 5vh, 0vh);
+        padding-top: 5vh;
 
-  .sns--wrapper{
-    padding-top: 15vh;
-    @include disFlexC(column, 5vh,0vh);
-    .sns--img{
-      @include disFlexC(column, 5vh, 0vh);
-      :nth-child(1){
-        @include flexV(row,0vh,5vh,flex-end,flex-end);
-      }
-      :nth-child(2){
-        @include flexV(row,0vh,5vh,flex-start,flex-start);
-      }
-    }
-    figure{
-      display: flex;
-      flex-wrap: wrap;
-      column-gap: 3vh;
-      :nth-child(1){
-        width: 20vh;
-        height: 20vh;
-      }
-      :nth-child(2){
-        width: 30vh;
-        height: 30vh;
-      }
-      :nth-child(3){
-        width: 40vh;
-        height: 40vh;
-      }
-      :nth-child(4){
-        width: 30vh;
-        height: 30vh;
-      }
-      :nth-child(5){
-        width: 20vh;
-        height: 20vh;
-      }
-      :nth-child(6){
-        width: 30vh;
-        height: 30vh;
-      }
-      :nth-child(7){
-        width: 40vh;
-        height: 40vh;
-      }
-      :nth-child(8){
-        width: 30vh;
-        height: 30vh;
-      }
-    }
-  }
+        .bestSeller--text {
+          display: flex;
 
-  .contact--wrapper{
-    @include disFlexC(column, 5vh, 5vh);
-    padding-top: 15vh;
-    .contact--contents__wrapper{
-      @include flexV(row, 0vh, 0vh, space-between,0vh);
-      .contact--phone__wrapper,
-      .contact--email__wrapper,
-      .contact--address__wrapper,
-      .contact--working__wrapper{
-        @include disFlexC(column, 2vh, 0vh);
-        h5{
-          color: $originalDarkGray;
+          justify-content: flex-start;
         }
-        p{
-          color: $originalLightBrown;
+        .bestSeller--img {
+          flex-direction: row !important;
+          column-gap: 0vh;
+          justify-content: space-around;
+          figure {
+            @include disFlexC(column, 3vh, 0vh);
+            align-items: center;
+            text-align: center;
+            img {
+              width: 40vh;
+              height: 50vh;
+              object-fit: cover;
+            }
+            figcaption {
+              color: $originalBrown;
+              font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+                sans-serif;
+              line-height: 1.5;
+            }
+          }
         }
+       
+      }
+      .feature--wrapper {
+        padding-top: 15vh;
+        width: 70%;
+        display: flex;
+        flex-direction: column;
+        row-gap: 5vh;
+        .feature--contents__wrapper {
+          justify-content: space-between;
+          display: flex;
+          column-gap: 3vh;
+        width: 100%;
+          align-items: center;
+          .feature--wrapper__left {
+            display: flex;
+            img{
+              width: 55vh;
+              height: 89vh;
+            }
+          }
+          .feature--wrapper__right {
+            width: 55%;
+
+            row-gap: 6vh;
+            p{
+              line-height: 2;
+            }
+            figure {
+              // width: 90%;
+              display: flex;
+              justify-content: space-between;
+              img {
+                width: 35vh;
+                height: 43vh;
+                
+              }
+            }
+          }
+        }
+      }
+      .sns--wrapper {
+        padding-top: 15vh;
+        width: 70%;
+        .sns--img {
+          width: 100%;
+          .sns--img__top {
+            :nth-child(1) {
+              width: 20vh;
+              height: 20vh;
+            }
+            :nth-child(2) {
+              width: 30vh;
+              height: 30vh;
+            }
+            :nth-child(3) {
+              width: 40vh;
+              height: 40vh;
+            }
+            :nth-child(4) {
+              width: 30vh;
+              height: 30vh;
+            }
+          }
+          .sns--img__bottom {
+            @include flexV(row, 0vh, 1vh, flex-start, flex-start);
+            :nth-child(1) {
+              width: 30vh;
+              height: 30vh;
+            }
+            :nth-child(2) {
+              width: 40vh;
+              height: 40vh;
+            }
+            :nth-child(3) {
+              width: 30vh;
+              height: 30vh;
+            }
+            :nth-child(4) {
+              width: 20vh;
+              height: 20vh;
+            }
+          }
+        }
+      }
+      .contact--wrapper{
+        padding-top: 15vh;
+        @include disFlexC(column, 5vh, 0vh);
+
       }
     }
   }
-
-  .googlemap-wrapper iframe {
-    -webkit-filter: grayscale(100%);
-    -moz-filter: grayscale(100%);
-    -ms-filter: grayscale(100%);
-    -o-filter: grayscale(100%);
-    filter: grayscale(100%);
-  }
-
-
-
-  footer {
-    padding-top: 8vh;
-    display: flex;
-    justify-content: flex-end;
-  }
-}
   
+}
