--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,14 @@ ul {
   body nav {
     padding: 5%;
   }
-  body nav .nav--list__wrapper {
+  body nav .nav--list__wrapper .nav--list ul {
     display: none;
+    justify-content: space-around;
+  }
+  body nav .nav--list__wrapper .nav--list ul li {
+    list-style-type: none;
+    color: rgb(93, 41, 11);
+    font-size: 20px;
   }
   body nav .nav--menu__btn {
     display: flex;
@@ -536,10 +542,16 @@ ul {
   }
 }
 @media (min-width: 1000px) {
+  body {
+    display: flex;
+  }
   body nav {
     padding: 2%;
+    border-right: 1px solid rgb(210, 182, 143);
+    display: flex;
   }
   body header {
+    padding-top: 10vh;
     -moz-column-gap: 5vh;
          column-gap: 5vh;
   }
@@ -592,7 +604,7 @@ ul {
   }
   body main .products--wrapper {
     width: 70%;
-    padding-top: 5vh;
+    padding-top: 3vh;
     display: flex;
     flex-direction: column;
     row-gap: 5vh;
@@ -600,12 +612,12 @@ ul {
          column-gap: 0vh;
   }
   body main .products--wrapper .products--wrapper__img figure img {
-    width: 40vh;
-    height: 40vh;
+    width: 37vh;
+    height: 37vh;
   }
   body main .aboutUs--wrapper {
     width: 70%;
-    padding-top: 10vh;
+    padding-top: 15vh;
   }
   body main .aboutUs--wrapper .aboutUs--contents__wrapper {
     display: flex;
@@ -636,7 +648,7 @@ ul {
     row-gap: 5vh;
     -moz-column-gap: 0vh;
          column-gap: 0vh;
-    padding-top: 5vh;
+    padding-top: 15vh;
   }
   body main .bestSeller--wrapper .bestSeller--text {
     display: flex;
@@ -680,18 +692,17 @@ ul {
     display: flex;
     -moz-column-gap: 3vh;
          column-gap: 3vh;
-    width: 100%;
     align-items: center;
   }
   body main .feature--wrapper .feature--contents__wrapper .feature--wrapper__left {
     display: flex;
   }
   body main .feature--wrapper .feature--contents__wrapper .feature--wrapper__left img {
-    width: 55vh;
-    height: 89vh;
+    width: 50vh;
+    height: 80vh;
   }
   body main .feature--wrapper .feature--contents__wrapper .feature--wrapper__right {
-    width: 55%;
+    width: 50%;
     row-gap: 6vh;
   }
   body main .feature--wrapper .feature--contents__wrapper .feature--wrapper__right p {
@@ -702,8 +713,8 @@ ul {
     justify-content: space-between;
   }
   body main .feature--wrapper .feature--contents__wrapper .feature--wrapper__right figure img {
-    width: 35vh;
-    height: 43vh;
+    width: 25vh;
+    height: 35vh;
   }
   body main .sns--wrapper {
     padding-top: 15vh;
@@ -754,6 +765,7 @@ ul {
     height: 20vh;
   }
   body main .contact--wrapper {
+    width: 70%;
     padding-top: 15vh;
     display: flex;
     flex-direction: column;
